# qt_template

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui  resources.qrc  run.bat
Header/: SettingsDialog.h  UIContainer.h  mainwindow.h
Header/Icons/: Base.h  CircleIcon.h
Source/: SettingsDialog.cpp  UIContainer.cpp  mainwindow.cpp
Source/Icons/: CircleIcon.cpp
UIFile/: SettingsDialog.ui
